[gd_scene load_steps=12 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://Assest/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assest/art/enemyWalking_2.png" type="Texture" id=3]
[ext_resource path="res://Assest/art/Tag.png" type="Texture" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assest/fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 64
outline_color = Color( 0.0862745, 0.847059, 0.709804, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assest/fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://Assest/fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=7]
size = 48
font_data = SubResource( 6 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 100.0
margin_right = 300.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 2 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MobLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -300.0
margin_right = -100.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -120.0
margin_right = 200.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 5 )
text = "Morning
meeting
is over!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -114.0
margin_top = -150.0
margin_right = 114.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 7 )
text = "Let's go"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="ScoreTag" type="Sprite" parent="."]
position = Vector2( 65.5, 50.4716 )
scale = Vector2( 0.06125, 0.0612842 )
texture = ExtResource( 4 )

[node name="ScoreMob" type="Sprite" parent="."]
position = Vector2( 405, 50 )
rotation = -1.5708
scale = Vector2( 0.34262, 0.34262 )
texture = ExtResource( 3 )
flip_v = true
[connection signal="pressed" from="StartButton" to="." method="show_labels"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
